--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,18 @@
                         </exclude>
                     </excludes>
                 </configuration>
+
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>2.4.4</version>
+                <configuration>
+                    <version>1</version>
+                    <projectId>whatapp-server</projectId>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
